--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath 'com.google.cloud.tools:appengine-gradle-plugin:+'
+
 	}
 }
 
@@ -41,8 +42,17 @@ war {
 	version = '0.0.1-SNAPSHOT'
 }
 
+appengine {
+	deploy {
+		version = "GCLOUD_CONFIG"
+		project = "GCLOUD_CONFIG"
+	}
+}
 
 dependencies {
+	//local dependence
+	//compile files('libs/suggues-api-0.1.0.jar')
+
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-integration')
 	compile('org.springframework.boot:spring-boot-starter-web')
@@ -55,6 +65,7 @@ dependencies {
 	compile("io.springfox:springfox-swagger-ui:2.6.1")
 	compile 'org.jsoup:jsoup:1.11.3'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+	compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '0.24.0.RELEASE'
 
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
